fix button on mobile

--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -37,7 +37,7 @@ th {
   @apply text-gray-600;
 }
 
-button {
+.btn {
   @apply px-4;
   @apply py-2;
   @apply bg-white;
